--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,7 @@ body {
     background-repeat: no-repeat;
     height: 800px;
     background-position: auto;
+    margin-bottom: 150px;
 }
 
 .banner-content {
@@ -40,4 +41,45 @@ body {
     color: #FFF;
     font-size: 20px;
     font-weight: 600;
+}
+
+/* years section style */
+.year-container {
+    margin: 150px 270px 150px 210px;
+}
+
+.year {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 87px;
+}
+
+.year-pic {
+    border-radius: 187px 45px;
+    background: rgba(241, 91, 34, 0.20);
+}
+
+.year-title {
+    color: #151414;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.year-description {
+    color: #444343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.points{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 0;
+}.fa-solid{
+    color: #16D887;
 }
