start the My Plans section

--- a/styles/index.css
+++ b/styles/index.css
@@ -83,3 +83,12 @@ body {
 }.fa-solid{
     color: #16D887;
 }
+/* end of preavious year */
+
+/* my plans  */
+.my-plans{
+    color: #151414;
+font-size: 40px;
+font-weight: 700;
+text-align: center;
+}
